--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -19,7 +19,7 @@ $gutter-horizontal:6rem;
 $default-font-size: 1.6rem;
 
 $default-font: 'Helvetica', sans-serif;
-$display-font: 'Muli', sans-serif;
+$display-font: "europa", sans-serif;
 
 $bp-large: 75em; // 1200
 $bp-medium: 62.5em; // 1000
