Peace sign fixup

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -40,7 +40,7 @@
         }
         &--mail-link {
             text-decoration:none;
-            color:inherit;
+            color:#fff;
             width:100%;
             font-size: 4rem;
             display: flex;
